--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -76,7 +76,7 @@
 
 .card-img-top {
   width: 100%;
-  height: 270px; /* o qualsiasi altezza desideri */
-  object-fit: cover; /* fa sì che l'immagine riempia il contenitore senza deformarsi */
+  height: 270px;
+  object-fit: cover;
   display: block;
 }
